fix scroll x overflow

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@
 }
 
 body {
+  width: 100vw;
+  overflow-x: hidden;
   background-color: #191931;
   display: flex;
   flex-direction: column;
